# llama.cpp-bindings

./: CHANGELOG.md  LICENSE  README.md  flake.nix  llama-cpp-bindings.cabal
cbits/: wrapper.c  wrapper.h
examples/: Main.hs
src/: LLaMACPP.chs
